# ai-news

./: .gitignore  CLAUDE.md  MISSION.md  NOTES.md  PRD-multi-platform-distribution.md  README.md  RESOURCES.md  docker-compose.yml  project-learn.md
assets/: lesson.css
blog/: package-lock.json  package.json  wrangler.toml
blog/layouts/: 404.html  (+1 more)
learning-records/: 0001-tech-stack-overview.md  0002-pipeline-design.md  0003-hugo-how-it-works.md  0004-infrastructure-details.md  0005-deploy-methods.md  0006-network-requests.md
lessons/: 0001-tech-stack-overview.html  0002-pipeline-design.html  0003-hugo-how-it-works.html  0004-infrastructure-details.html  0005-deploy-methods.html  0006-network-requests.html
pipeline/: .env.example  Dockerfile  config.yaml  pyproject.toml  requirements.txt
pipeline/prototypes/wechat/: NOTES.md  adapter.py  tui.py
pipeline/src/: config.py  main.py  models.py
pipeline/src/adapt/: base.py  blog_adapter.py  douyin_adapter.py  wechat_adapter.py
pipeline/src/compliance/: aigc_label.py
pipeline/src/filter/: classifier.py  dedup.py
pipeline/src/gather/: api_collector.py  rss_collector.py  scraper.py
pipeline/src/publish/: base.py  blog_publisher.py  douyin_video.py  feishu_publisher.py  wechat_playwright.py  wechat_publisher.py
pipeline/src/qa/: embedding_check.py  fallback.py
pipeline/src/summarize/: prompt.py  summarizer.py
pipeline/tests/: test_config.py  test_douyin_adapter.py  test_douyin_video.py  test_feishu_publisher.py  test_platforms.py  test_wechat_adapter.py  test_wechat_publisher.py
reference/: glossary.html
(+210 files in other folders)
