[project]
name = "ai-news-pipeline"
version = "0.1.0"
description = "AI News 早报 — 自动化新闻处理管道"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.30",
    "sentence-transformers>=3.0",
    "playwright>=1.40",
    "click>=8.0",
]

[project.scripts]
ai-news = "src.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
